force-app/main/default/objects/Placement_Status_Code_Mapping__c/Placement_Status_Code_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Placement Status Codes mapping with Status and Sub Status - used in Debtnext Migration project</description>
    <label>Placement Status Code Mapping</label>
</CustomObject>