force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>Complete_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complete Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>