force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Data_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Status_Description__c</fullName>
    <description>Data Status Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Status Description</inlineHelpText>
    <label>Data Status Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>