force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/External_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Description__c</fullName>
    <description>External Description for Product External Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>External Description for Product External Description</inlineHelpText>
    <label>External Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>