force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Include_in_Recall__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Recall</label>
    <type>Checkbox</type>
</CustomField>