force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status__c</fullName>
    <description>Parent status names</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Parent status names</inlineHelpText>
    <label>Parent Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>