force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Description 1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description 1</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>