force-app/main/default/objects/Placement_Status_Code_Mapping__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Description 2</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description 2</inlineHelpText>
    <label>Sub Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>