force-app/main/default/objects/Placement_Status_Code_Mapping__c/listViews/All_codes.listView-meta.xml
<ListView>
    <fullName>All_codes</fullName>
    <columns>NAME</columns>
    <columns>Parent_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Placement_Status_Code__c</columns>
    <columns>Data_Status_Code__c</columns>
    <columns>Data_Status_Description__c</columns>
    <columns>Complete_Status__c</columns>
    <columns>External_Description__c</columns>
    <columns>Include_in_Recall__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Placement Codes</label>
    <language>en_US</language>
</ListView>